[tool.poetry]
name = "caldera"
version = "0.1.0"
description = ""
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
keywords = ["pytorch", "machine learning", "network", "graph"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.0"
torch-scatter = "^2.0.4"
networkx = "^2.4"
numpy = "^1.18.4"
pytest-cov = {version = "^2.10.0", optional = true}
black = {version = "^19.10b0", optional = true}
pre-commit = {version = "^2.6.0", optional = true}
pylint = {version = "^2.5.3", optional = true}
sphinx-rtd-theme = {version = "^0.5.0", optional = true}
sphinx = {version = "^3.2.0", optional = true}

[tool.poetry.extras]
lint = ['black', 'pytest-cov', 'pre-commit', 'pylint']
docs = ['sphinx', 'sphinx-rtd-theme']

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
flaky = "^3.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
