[tool.poetry]
name = "caldera"
version = "0.1.0"
description = ""
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
keywords = ["pytorch", "machine learning", "network", "graph"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.0"
torch-scatter = "^2.0.4"
networkx = "^2.4"
numpy = "^1.18.4"
scipy = "^1.5.2"
pytest-cov = {version = "^2.10.0", extras = ["lint"]}
black = {version = "^19.10b0", extras = ["lint"]}
pre-commit = {version = "^2.6.0", extras = ["lint"]}
pylint = {version = "^2.5.3", extras = ["lint"]}
sphinx-rtd-theme = {version = "^0.5.0", extras = ["docs"]}
sphinx_autodoc_typehints = {version = "^1.11.0", extras = ["docs"]}
sphinx = {version = "^3.2.1", extras = ["docs"]}
autodocsumm = {version = "^0.2.0", extras = ["docs"]}

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
flaky = "^3.7.0"
dictdiffer = "^0.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
